<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regis"
        android:fontFamily="@font/poppinsbold"
        android:textSize="24sp"
        android:textColor="#1E293B"
        android:layout_marginTop="130dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/urname"
        android:textSize="14sp"
        android:paddingStart="8dp"
        android:background="@drawable/button_abu"
        android:layout_marginTop="30dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        app:layout_constraintTop_toBottomOf="@+id/regis"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/mail"
        android:textSize="14sp"
        android:paddingStart="8dp"
        android:background="@drawable/button_abu"
        android:layout_marginTop="20dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        app:layout_constraintTop_toBottomOf="@+id/user"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/hp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/phn"
        android:inputType="text|number"
        android:textSize="14sp"
        android:paddingStart="8dp"
        android:background="@drawable/button_abu"
        android:layout_marginTop="20dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        app:layout_constraintTop_toBottomOf="@+id/mail"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/pw"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:background="@drawable/button_abu"
        android:layout_marginTop="20dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        app:layout_constraintTop_toBottomOf="@+id/hp"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <ImageView
        android:id="@+id/cekk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/klikk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/bycek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/bycek"
        android:textSize="8sp"
        android:textColor="#1E293B"
        app:layout_constraintStart_toEndOf="@+id/cekk"
        app:layout_constraintTop_toBottomOf="@+id/password"/>

    <TextView
        android:id="@+id/bycek1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/trms"
        android:textSize="8sp"
        android:textColor="#525BFF"
        app:layout_constraintStart_toEndOf="@+id/bycek"
        app:layout_constraintTop_toBottomOf="@+id/password"/>


    <TextView
        android:id="@+id/bycek2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/and"
        android:textSize="8sp"
        android:textColor="#1E293B"
        app:layout_constraintStart_toEndOf="@+id/bycek1"
        app:layout_constraintTop_toBottomOf="@+id/password"/>

    <TextView
        android:id="@+id/bycek3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/cond"
        android:textSize="8sp"
        android:textColor="#525BFF"
        app:layout_constraintStart_toEndOf="@+id/bycek2"
        app:layout_constraintTop_toBottomOf="@+id/password"/>

    <TextView
        android:id="@+id/bycek4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/tiktik"
        android:textSize="8sp"
        android:textColor="#1E293B"
        app:layout_constraintStart_toEndOf="@+id/bycek3"
        app:layout_constraintTop_toBottomOf="@+id/password"/>

    <EditText
        android:id="@+id/btnregis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/submit"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/regis"
        android:clickable="true"
        android:paddingStart="150dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/cekk"
        tools:ignore="DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteX="61dp" />

    <TextView
        android:id="@+id/already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/alrdy"
        android:textColor="#1E293B"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnregis" />

    <TextView
        android:id="@+id/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/log2"
        android:textColor="#525BFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="@+id/already"
        app:layout_constraintTop_toBottomOf="@+id/btnregis" />
</androidx.constraintlayout.widget.ConstraintLayout>
