<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Loginpage">

    <TextView
        android:id="@+id/logpg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log"
        android:fontFamily="@font/poppinsbold"
        android:textSize="24sp"
        android:textColor="#1E293B"
        android:layout_marginTop="249dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/user2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/urname"
        android:textSize="14sp"
        android:paddingStart="8dp"
        android:background="@drawable/button_abu"
        android:layout_marginTop="40dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        app:layout_constraintTop_toBottomOf="@+id/logpg"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/pw2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/pw"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:background="@drawable/button_abu"
        android:layout_marginTop="30dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        app:layout_constraintTop_toBottomOf="@+id/user2"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/cekk2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/klikk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pw2" />

    <TextView
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/rmmber"
        android:textSize="8sp"
        android:textColor="#1E293B"
        app:layout_constraintStart_toEndOf="@+id/cekk2"
        app:layout_constraintTop_toBottomOf="@+id/pw2"/>

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/frgt"
        android:textColor="#525BFF"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/remember"
        app:layout_constraintTop_toBottomOf="@+id/pw2" />

    <EditText
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/submit"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/log"
        android:paddingStart="150dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/cekk2"
        tools:ignore="DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteX="61dp" />

    <TextView
        android:id="@+id/nwmember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/nwmmbr"
        android:textColor="#1E293B"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin" />

    <TextView
        android:id="@+id/clickregis2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/regis"
        android:textColor="#525BFF"
        android:textSize="12sp"
        android:clickable="true"
        android:onClick="onTextClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="@+id/remember"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin" />


</androidx.constraintlayout.widget.ConstraintLayout>